--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -93,6 +93,8 @@ landingContent:
           url: threat-protection/windows-sandbox/windows-sandbox-overview.md
         - text: Microsoft Defender SmartScreen
           url: threat-protection/microsoft-defender-smartscreen/microsoft-defender-smartscreen-overview.md
+        - text: S/MIME for Windows
+          url: identity-protection/configure-s-mime.md
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
