--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -95,6 +95,8 @@ landingContent:
           url: threat-protection/microsoft-defender-smartscreen/microsoft-defender-smartscreen-overview.md
         - text: S/MIME for Windows
           url: identity-protection/configure-s-mime.md
+        - text: Windows Credential Theft Mitigation
+          url: identity-protection/windows-credential-theft-mitigation-guide-abstract.md
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
