--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -129,6 +129,8 @@ landingContent:
           url: identity-protection/windows-credential-theft-mitigation-guide-abstract.md
         - text: Windows Defender Credential Guard
           url: identity-protection/credential-guard/credential-guard.md
+        - text: Lost or forgotten passwords
+          url: identity-protection/password-support-policy.md
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
