--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -133,6 +133,8 @@ landingContent:
           url: identity-protection/password-support-policy.md
         - text: Access control
           url: identity-protection/access-control/access-control.md
+        - text: Smart cards
+          url: identity-protection/smart-cards/smart-card-windows-smart-card-technical-reference.md
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
