--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -100,6 +100,10 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
+        - text: Overview
+          url: cloud.md
+      - linkListType: concept
+        links:
         - text: Modern device management
           url: mdm-windows.md
         - text: Azure Active Directory
