--- a/windows/security/index.yml
+++ b/windows/security/index.yml
@@ -11,7 +11,7 @@ metadata:
   ms.collection: m365-security-compliance
   author: dansimp #Required; your GitHub user alias, with correct capitalization.
   ms.author: dansimp #Required; microsoft alias of author; optional team alias.
-  ms.date: 09/17/2021
+  ms.date: 09/20/2021
   localization_priority: Priority
     
 # linkListType: architecture | concept | deploy | download | get-started | how-to-guide | learn | overview | quickstart | reference | tutorial | video | whats-new
@@ -54,7 +54,7 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-        - text: Operating system security
+        - text: Overview
           url: operating-system.md
       - linkListType: concept
         links:
@@ -117,11 +117,11 @@ landingContent:
 # Cards and links should be based on top customer tasks or top subjects
 # Start card title with a verb
   # Card (optional)
-  - title: User protection
+  - title: User security and secured identity
     linkLists:
       - linkListType: overview
         links:
-        - text: Windows identity security
+        - text: Overview
           url: identity.md
       - linkListType: concept
         links:
@@ -146,7 +146,7 @@ landingContent:
     linkLists:
       - linkListType: overview
         links:
-        - text: Security foundations
+        - text: Overview
           url: security-foundations.md
       - linkListType: reference
         links:
