--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -545,6 +545,8 @@ items:
               href: policy-csp-admx-offlinefiles.md
             - name: ADMX_PeerToPeerCaching
               href: policy-csp-admx-peertopeercaching.md
+           - name: ADMX_PenTraining
+              href: policy-csp-admx-pentraining.md 
             - name: ADMX_PerformanceDiagnostics
               href: policy-csp-admx-performancediagnostics.md
             - name: ADMX_Power
