--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -630,7 +630,9 @@ items:
             - name: ADMX_wlansvc
               href: policy-csp-admx-wlansvc.md
             - name: ADMX_WordWheel
-              href: policy-csp-admx-wordwheel.md  
+              href: policy-csp-admx-wordwheel.md 
+            - name: ADMX_WorkFoldersClient
+              href: policy-csp-admx-workfoldersclient.md    
             - name: ADMX_WPN
               href: policy-csp-admx-wpn.md
             - name: ApplicationDefaults
