--- a/windows/client-management/mdm/toc.yml
+++ b/windows/client-management/mdm/toc.yml
@@ -535,6 +535,8 @@ items:
               href: policy-csp-admx-printing2.md
             - name: ADMX_Programs
               href: policy-csp-admx-programs.md
+            - name: ADMX_Radar
+              href: policy-csp-admx-radar.md  
             - name: ADMX_Reliability
               href: policy-csp-admx-reliability.md
             - name: ADMX_RemoteAssistance
@@ -547,10 +549,14 @@ items:
               href: policy-csp-admx-scripts.md
             - name: ADMX_sdiageng
               href: policy-csp-admx-sdiageng.md
+            - name: ADMX_sdiagschd
+              href: policy-csp-admx-sdiagschd.md  
             - name: ADMX_Securitycenter
               href: policy-csp-admx-securitycenter.md
             - name: ADMX_Sensors
               href: policy-csp-admx-sensors.md
+            - name: ADMX_ServerManager
+              href: policy-csp-admx-servermanager.md  
             - name: ADMX_Servicing
               href: policy-csp-admx-servicing.md
             - name: ADMX_SettingSync
@@ -567,6 +573,8 @@ items:
               href: policy-csp-admx-smartcard.md
             - name: ADMX_Snmp
               href: policy-csp-admx-snmp.md
+            - name: ADMX_SoundRec
+              href: policy-csp-admx-soundrec.md  
             - name: ADMX_StartMenu
               href: policy-csp-admx-startmenu.md
             - name: ADMX_SystemRestore
